# supersonic

./: .gitignore  .gitmodules  CMakeLists.txt  profile.sh  run.sh  setup.sh
include/: ArenaMesh.cuh  CarCollision.cuh  CudaCommon.cuh  CudaKernels.cuh  CudaMath.cuh  CudaUtils.cuh  GameState.cuh  RLConstants.cuh  RLEnvironment.cuh  StateReset.cuh  Workspace.cuh
src/: ArenaMesh.cu  CudaKernels.cu  RLConstants.cu  RLEnvironment.cu  main.cpp
